# kedro_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
data/01_raw/: sample_alpha.csv  sample_beta.csv
src/gc_content_analysis/: __init__.py  __main__.py  settings.py
src/gc_content_analysis/pipelines/dna_analysis/: nodes.py  pipeline.py
tmp/spaceflights-pandas/: README.md  pyproject.toml
tmp/spaceflights-pandas/tests/pipelines/data_science/: test_pipeline.py
