[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "gc_content_analysis"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.2.0",
]

[project.scripts]
gc-content-analysis = "gc_content_analysis.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.setuptools.dynamic.version]
attr = "gc_content_analysis.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "gc_content_analysis"
project_name = "GC Content Analysis"
kedro_init_version = "1.2.0"
tools = "['Testing', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/gc_content_analysis -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.kedro_telemetry]
project_id = "be2a876e77f9452e9838613891c7df18"
